batch/sg.tf
resource "aws_security_group" "batch_sg" {
  name   = "${var.project}-sg"
  vpc_id = aws_vpc.main.id
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
